apps/lldap/service-ldap.yaml
apiVersion: v1
kind: Service
metadata:
  name: lldap
  labels:
    app.kubernetes.io/name: lldap
spec:
  externalTrafficPolicy: Local
  ports:
  - name: ldap
    port: 3890
    targetPort: ldap
  selector:
    app.kubernetes.io/name: lldap
  type: LoadBalancer
